--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -52,7 +52,7 @@ h4 {
 }
 
 .chio-features {
-    margin: 0 auto 60px;
+    margin: 0 auto 35px;
     max-width: 300px;
 
     @media (min-width: 481px) {
@@ -82,6 +82,15 @@ h4 {
 
 .chio-otherFeature {
     padding: 30px 0 20px;
+}
+
+.chio-links {
+    margin-bottom: 30px;
+    font-size: 18px;
+}
+
+.chio-link {
+    color: #333;
 }
 
 .chio-footer {
